package edu.fiuba.algo3.modelo.Preguntas;

import edu.fiuba.algo3.modelo.bonus.Exclusividad;

public interface PreguntaSinPenalidad {

    public Exclusividad getExclusividad();
}
